# ai_job_candidate_reviewer

./: .flake8  .gitignore  ARCHITECTURE.md  CLAUDE_AGENT_DOCUMENT.md  CONFIGURATION.md  DEVELOPMENT.md  DOCUMENTATION_REVIEW_SUMMARY.md  GETTING_STARTED.md  GITHUB_ACTIONS_SETUP.md  GITHUB_ACTIONS_SUMMARY.md  LICENSE  LINTING_STRATEGY.md  README.md  SCREENING_FILTERS.md  SECURITY_TESTING_GUIDELINES.md  ai_client.py  candidate_reviewer.py  config.py  debug_typo.py  feedback_manager.py  file_processor.py  models.py  monitor_gpt5.py  open_api_test_connection.py  output_generator.py  pre-push.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_file_detection.py  test_typo_detection.py  verify_installation.py
.github/workflows/: test.yml
policy/: filter_enforcer.py
tests/: __init__.py
tests/integration/: test_end_to_end.py
tests/unit/: test_ai_client.py  test_config.py  test_feedback_manager.py  test_file_processor.py  test_identity_deduplication.py  test_models.py  test_output_generator.py  test_provide_feedback_cli.py  test_typo_detection.py
